@@ -22,8 +22,8 @@ android {
         applicationId 'com.stanleyidesis.quotograph'
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 11
-        versionName "1.1.1"
+        versionCode 12
+        versionName "1.1.2"
     }
     buildTypes {
         release {
